# pawn-compiler-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  output.amx  package.json  pwnrust.json  tsconfig.json
.cursor/rules/: rust-coding-rules.mdc  ts-coding-rules.mdc
crates/pawn-amx/: Cargo.toml
crates/pawn-amx/src/: error.rs  header.rs  instructions.rs  lib.rs  runtime.rs  types.rs
crates/pawn-cli/: Cargo.toml
crates/pawn-cli/src/: main.rs
crates/pawn-compiler/: Cargo.toml
crates/pawn-compiler/src/: ast.rs  codegen.rs  config.rs  error.rs  formatter.rs  lexer.rs  lib.rs  linter.rs  parser.rs  symbol_table.rs
crates/pawn-compiler/tests/: smoke.rs
original-pawn-compiler/: readme.md
original-pawn-compiler/source/compiler/: CMakeLists.txt  sc1.c  sc2.c
scripts/commands/: test-examples.ts
