[workspace]
members = [
    "crates/pawn-compiler",
    "crates/pawn-amx",
    "crates/pawn-cli"
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["reliverse"]
repository = "https://github.com/reliverse/pawnrs"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
