[package]
name = "pawn-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for the Pawn compiler"

[[bin]]
name = "pawncc"
path = "src/main.rs"

[dependencies]
pawn-compiler = { path = "../pawn-compiler" }
pawn-amx = { path = "../pawn-amx" }
clap = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
regex = { workspace = true }
