[package]
name = "pawn-compiler"
version = "0.1.0"
edition = "2024"
description = "Core Pawn compiler implementation"

[dependencies]
pawn-amx = { path = "../pawn-amx" }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
nom = "7.1"
regex = { workspace = true }
indexmap = "2.0"
